Used ArrayList instead of List